# Doctor-Appointment

./: .coverage  .env  .gitignore  README.md  pyproject.toml  seed_admin.py  seed_specialties.py
alembic/: env.py
alembic/versions/: 09bf3bdba83e_initial.py  4c150bba03d7_init_all_tables.py
app/: config.py  db.py  main.py  seed.py  startup.py
app/core/: auth.py  deps.py  security.py
app/models/: __init__.py  appointment.py  appointment_slot.py  doctor_profile.py  favorite.py  notification.py  review.py  specialty.py  user.py
app/routers/: admin.py  appointments.py  auth.py  doctor_appointments.py  doctor_me.py  doctor_slots.py  doctors.py  favorites.py  notifications.py  public_slots.py  reviews.py  specialties.py  users.py
app/schemas/: appointments.py  auth.py  auth_doctor.py  doctor.py  doctor_slots.py  enums.py  notifications.py  reviews.py  slots.py  specialty.py  user.py
app/services/: __init__.py  notifications.py
doctor_appointment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  test_admin.py  test_appointments.py  test_auth.py  test_doctor_appointments.py  test_doctor_me.py  test_doctors.py  test_favorites.py  test_notifications.py  test_public_slots.py  test_reviews.py  test_security.py  test_seed.py  test_slots.py  test_specialties.py  test_users.py
utils/: notifications.py
